feat: update page titles to consistent format (luxsearch® | Page Name)

--- a/src/pages/hire-talent.astro
+++ b/src/pages/hire-talent.astro
@@ -2,7 +2,7 @@
 import Layout from '../components/Layout.astro';
 ---
 
-<Layout title="Hire Talent" currentPage="hire-talent">
+<Layout title="luxsearch® | Hire Talent" currentPage="hire-talent">
     <div class="container grid-2">
         <!-- First Collaboration Process -->
         <div class="card card-tall">
