--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -16,7 +16,7 @@ const { title, currentPage } = Astro.props;
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{title} | luxsearch®</title>
+    <title>luxsearch® | {title}</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
