--- a/src/pages/hire-talent.astro
+++ b/src/pages/hire-talent.astro
@@ -3,7 +3,7 @@ import Layout from '../components/Layout.astro';
 ---
 
 <Layout title="Hire Talent" currentPage="hire-talent">
-    <div class="container grid-2">
+    <div class="container grid-2 hire-talent-layout">
         <!-- First Collaboration Process -->
         <div class="card card-tall">
             <h3 class="title">First collaboration:</h3>
